/bubble/edit, api
